--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <ul class="gallery"></ul>
       <div id="gallery"></div>
 
-      <button id="loadMore" style="display: none" class="btn-load-more">
+      <button id="loadMore" style="display: none" class="xome btn-load-more">
         Load more
       </button>
       <div id="loading" style="display: none">Loading...</div>
