--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,7 @@
         <p class="wait-msg"></p>
       </form>
 
-      <ul class="gallery"></ul>
-      <div id="gallery"></div>
+      <ul id="gallery" class="gallery"></ul>
 
       <button id="loadMore" style="display: none" class="xome btn-load-more">
         Load more
